# FreeAnimationPower

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTEXT.md  HANDOFF_LENS_REFACTOR.md  HANDOFF_REPORT_2026-06-18.md  INVESTIGACION_TECNICA.md  LICENSE  README.md  STATUS_LENS_REFACTOR.md  TROUBLESHOOTING_REPORT.md  free_animation_power.py  main.py  memory_stress_results_2026-06-27_190518.txt  run.bat  skills-lock.json
.github/workflows/: ci.yml
.opencode/plans/: fix-busy-overlay-crash.md
_design_source/icons/: iconos base.ai
_design_source/logos/: logo FAP 32px.ai  logo FAP 48px.ai  logo FAP 64px.ai
docs/: INFORME_ARQUITECTURA_V1.md  INFORME_COMPLETO_FAP.md  TECHNICAL_REPORT_SESSION_2026-06-27.md  architecture.md  auditoria-2026-07-10.md  build-instructions.md  diagnostico-persistente-2026-07-10.md  handoff-canvas-state-machine.md  report-acetato-nle-2026-07-03.md  session-report-2026-07-02.md  session-report-2026-07-03.md  session-report-2026-07-04.md
docs/archive/: HANDOFF_REPORT_2026-06-18.md  MEMORY_REPORT.md  TECHNICAL_REPORT_SESSION_2026-06-26.md  TECHNICAL_REPORT_SESSION_2026-06-27.md  handoff-canvas-state-machine.md  session-report-2026-07-03.md  session-report-2026-07-08.md  session-report-2026-07-13-pasteboard.md  session-report-2026-07-13.md
logos/: FAP LOGO.ai  brushes.psd  logo FAP 128px.ai  logo FAP 16 px.ai  logo FAP 24px.ai  logo FAP 256px.ai  logo fap chico.ai
resources/: app.manifest  resources.qrc  version.rc
resources/brushes/default/: README.md  presets.json
resources/palettes/: default.json
resources/textures/: README.md
scripts/: embed_icon.py
src/: main.cpp
src/core/: app_state.cpp  app_state.hpp  canvas.cpp  canvas.hpp  document.cpp  document.hpp  layer.cpp  layer.hpp  project.cpp  sequence.cpp  sequence.hpp  stroke.cpp  stroke.hpp  timeline.cpp  timeline.hpp  tool_state.cpp  tool_state.hpp  types.cpp  types.hpp  undo_manager.cpp  undo_manager.hpp
src/core/diagnostic/: tracer.cpp  tracer.hpp  tracer_macros.hpp  tracer_types.hpp
src/engine/animation/: audio_engine.cpp  audio_engine.hpp  audio_file_decoder.cpp  audio_file_decoder.hpp  frame_thumbnail.cpp  frame_thumbnail.hpp  onion_skin.cpp  playback.cpp  timeline_engine.cpp  tween_engine.cpp  tween_engine.hpp  video_decoder.cpp  video_decoder.hpp
src/engine/brush/: abr_importer.cpp  abr_importer.hpp  brush_engine.cpp  brush_engine.hpp  brush_preset.cpp  paper_texture.cpp  pencil_retouch.cpp  pencil_retouch.hpp  ruler_guide.cpp  ruler_guide.hpp
src/engine/common/: blend_utils.hpp
src/engine/compositor/: compositor.cpp  compositor.hpp  node_graph.cpp  node_graph.hpp
src/engine/deformation/: deformation_engine.cpp  deformation_engine.hpp  deformation_mesh.cpp  deformation_mesh.hpp
src/engine/raster/: raster_effect.cpp  raster_effect.hpp  raster_engine.cpp  raster_engine.hpp  raster_stroke.cpp
src/engine/vector/: bezier_path.cpp  bezier_path.hpp  vector_engine.cpp  vector_engine.hpp  vector_stroke.cpp
src/io/: document_io.cpp  document_manager.cpp  document_manager.hpp  file_format.cpp  serialization_common.cpp  serialization_common.hpp  svg_export.cpp  svg_export.hpp  video_export.cpp  video_export.hpp
src/platform/: file_association.cpp  file_association.hpp  input_manager.cpp  input_manager.hpp  tablet_handler.cpp  tablet_handler.hpp
src/ui/: PLACEHOLDER.md  canvas_widget.cpp  canvas_widget.hpp  color_panel.cpp  color_panel.hpp  icons.hpp  layer_panel.cpp  layer_panel.hpp  main_window.cpp  main_window.hpp  opengl_canvas_widget.cpp  opengl_canvas_widget.hpp  property_editor.cpp  property_editor.hpp  timeline_panel.cpp  timeline_panel.hpp  toolbox_panel.cpp  toolbox_panel.hpp  undo_commands.cpp  undo_commands.hpp
src/ui_v2/: audio_track_widget.cpp  audio_track_widget.hpp  busy_overlay.cpp  busy_overlay.hpp  canvas_size_panel.cpp  canvas_size_panel.hpp  canvas_widget_v2.cpp  canvas_widget_v2.hpp  color_panel_v2.cpp  color_panel_v2.hpp  layer_lock_button.cpp  layer_lock_button.hpp  layer_panel_v2.cpp  layer_panel_v2.hpp  main_window_v2.cpp  main_window_v2.hpp  onion_skin_panel.cpp  onion_skin_panel.hpp  property_editor_v2.cpp  property_editor_v2.hpp  timeline_panel_v2.cpp  timeline_panel_v2.hpp  toolbox_panel_v2.cpp  toolbox_panel_v2.hpp  video_track_widget.cpp  video_track_widget.hpp
src_py/: DEPRECATED.md  __init__.py  brush_engine.py  canvas.py  document.py  main_window.py  panels.py  timeline.py  tools.py  types_enums.py
tests/: test_abr_importer.cpp  test_audio_engine.cpp  test_bezier.cpp  test_brush_engine.cpp  test_compositor.cpp  test_deformation.cpp  test_document.cpp  test_file_format.cpp  test_layer.cpp  test_layer_memory.cpp  test_memory_stress.cpp  test_node_graph.cpp  test_pencil_retouch.cpp  test_ruler_guide.cpp  test_timeline.cpp  test_tween_engine.cpp  test_undo.cpp
